--- a/ExamWork.ipynb
+++ b/ExamWork.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMEbhXqEASO9iddiFY5ODO4",
+      "authorship_tag": "ABX9TyN7AiLIi0N/qVP7/4E6cd3Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -507,6 +507,59 @@
           "text": [
             "data batch shape: (32, 524, 524, 3)\n",
             "labels batch shape: (32, 9)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Trying to replicate CH8 consisting of DogsVsCats"
+      ],
+      "metadata": {
+        "id": "h0imo236_HrJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os, shutil, pathlib\n",
+        "original_dir = pathlib.Path(\"content/realwaste-main/RealWaste\")\n",
+        "new_base_dir = pathlib.Path(\"RealWaste2\")\n",
+        "\n",
+        "def make_subset(subset_name, start_index, end_index):\n",
+        "  for category in (\"Cardboard\", \"Food Organics\", \"Glass\", \"Metal\", \"MescellaneousTrash\", \"Paper\", \"Plastic\", \"Textile Trash\", \"Vegetation\"):\n",
+        "      dir = new_base_dir / subset_name / category\n",
+        "      os.makedirs(dir)\n",
+        "      fnames = [f\"{category}.{i}\" #removing .jpg from the initial listing\n",
+        "                for i in range(start_index, end_index)]\n",
+        "      for fname in fnames:\n",
+        "          shutil.copyfile(src=original_dir / fname, dst=dir / fname)\n",
+        "\n",
+        "make_subset(\"train\", start_index=0, end_index=3802)\n",
+        "make_subset(\"validation\", start_index=3802, end_index=4752)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 339
+        },
+        "id": "GUE-UzHO_Lw5",
+        "outputId": "613c7842-7170-4e39-8774-7a2309821b88"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "FileExistsError",
+          "evalue": "[Errno 17] File exists: 'RealWaste2/train/Cardboard'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileExistsError\u001b[0m                           Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-34-b7e8f84d3176>\u001b[0m in \u001b[0;36m<cell line: 14>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m           \u001b[0mshutil\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopyfile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msrc\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0moriginal_dir\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mfname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdst\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdir\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mfname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mmake_subset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"train\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstart_index\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend_index\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3802\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0mmake_subset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"validation\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstart_index\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3802\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend_index\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m4752\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-34-b7e8f84d3176>\u001b[0m in \u001b[0;36mmake_subset\u001b[0;34m(subset_name, start_index, end_index)\u001b[0m\n\u001b[1;32m      6\u001b[0m   \u001b[0;32mfor\u001b[0m \u001b[0mcategory\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m\"Cardboard\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Food Organics\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Glass\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Metal\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"MescellaneousTrash\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Paper\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Plastic\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Textile Trash\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Vegetation\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m       \u001b[0mdir\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnew_base_dir\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0msubset_name\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mcategory\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m       \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmakedirs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m       fnames = [f\"{category}.{i}\" #removing .jpg from the initial listing\n\u001b[1;32m     10\u001b[0m                 for i in range(start_index, end_index)]\n",
+            "\u001b[0;32m/usr/lib/python3.10/os.py\u001b[0m in \u001b[0;36mmakedirs\u001b[0;34m(name, mode, exist_ok)\u001b[0m\n\u001b[1;32m    223\u001b[0m             \u001b[0;32mreturn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    224\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 225\u001b[0;31m         \u001b[0mmkdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    226\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mOSError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    227\u001b[0m         \u001b[0;31m# Cannot rely on checking for EEXIST, since the operating system\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileExistsError\u001b[0m: [Errno 17] File exists: 'RealWaste2/train/Cardboard'"
           ]
         }
       ]
